--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@ hello eli 1
 
 <br>
 
-<a href="telegram1">telegram 1</a>
+<!--<a href="telegram1">telegram 1</a> -->
 
 <!-- <script>
 	var telegram = require('telegram-node-bot');
